Initial UI Changes

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 
   <ion-header>
     <ion-toolbar>
-      <ion-title>Pages</ion-title>
+      <ion-title>Econth CRM App</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -13,6 +13,17 @@
       </button>
     </ion-list>
   </ion-content>
+
+  <ion-footer>
+    <ion-toolbar>
+      <p>Parthiban</p>
+      <ion-buttons end>
+        <button ion-button icon-right color="royal">
+          Signout <ion-icon md="md-log-out" name="log-out"></ion-icon>
+        </button>
+      </ion-buttons> 
+    </ion-toolbar>
+  </ion-footer>
 
 </ion-menu>
 
