Initial Dashboard Design

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,8 +18,8 @@
     <ion-toolbar>
       <p>Parthiban</p>
       <ion-buttons end>
-        <button ion-button icon-right color="royal">
-          Signout <ion-icon md="md-log-out" name="log-out"></ion-icon>
+        <button ion-button icon-right color="danger">
+          Logout <ion-icon md="md-log-out" name="log-out"></ion-icon>
         </button>
       </ion-buttons> 
     </ion-toolbar>
