Designing dashboard screen commit 1

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,7 +28,11 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  appointments:#337ab7,
+  tasks:      rgb(92, 184, 92),
+  comments:   rgb(240, 173, 78),
+  complaints: rgb(217, 83, 79)
 );
 
 
