Dashboard designing commit 0n 2nd June

--- a/src/pages/hello-ionic/hello-ionic.scss
+++ b/src/pages/hello-ionic/hello-ionic.scss
@@ -29,4 +29,22 @@ page-hello-ionic {
     .dashboard-complaint-button{
         color:rgb(217, 83, 79);
     }
+    .panel-heading{
+        background-color: #f5f5f5;
+    }
+    table tr:nth-child(even) {
+    background-color: #eee;
+    }
+    table tr:nth-child(odd) {
+        background-color: #fff;
+    }
+    
+    tr,th,td,table{
+        border: 1px solid black;
+    }
+
+    table{
+        width:100%;
+    }
+
 }
