--- a/src/pages/hello-ionic/hello-ionic.scss
+++ b/src/pages/hello-ionic/hello-ionic.scss
@@ -33,18 +33,27 @@ page-hello-ionic {
         background-color: #f5f5f5;
     }
     table tr:nth-child(even) {
-    background-color: #eee;
-    }
-    table tr:nth-child(odd) {
-        background-color: #fff;
+    background-color: #dddddd;
     }
     
-    tr,th,td,table{
-        border: 1px solid black;
+    th,td{
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
     }
 
     table{
         width:100%;
+        margin-top: 12px;
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        
     }
+
+    .table-responsive{
+        overflow-x: scroll;
+    }
+
+    
 
 }
