--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
 
   <ion-content>
     <ion-list *ngFor="let p of pages">
-      <button ion-item (click)="openPage(p)"><i class="fa {{p.icon}} fa-lg"></i> {{p.title}}</button>
+      <button ion-item (click)="openPage(p)" id="menu_{{p.id}}"><i class="fa {{p.icon}} fa-lg"></i> {{p.title}}</button>
        <ion-list id="sidenav" *ngFor="let sub of p.children" >
            <button ion-item submenu-item *ngIf="showSubmenu"> {{sub.title}}</button>
        </ion-list>
