--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,8 +7,8 @@
   </ion-header>
 
   <ion-content>
-    <ion-list *ngFor="let p of pages">
-      <button ion-item (click)="openPage(p)" id="menu_{{p.id}}"><i class="fa {{p.icon}} fa-lg"></i> {{p.title}}</button>
+    <ion-list *ngFor="let p of pages;let i=index">
+      <button ion-item (click)="openPage(p,i)" id="menu_{{p.id}}"><i class="fa {{p.icon}} fa-lg"></i> {{p.title}}</button>
        <ion-list id="sidenav" *ngFor="let sub of p.children" >
            <button ion-item submenu-item *ngIf="showSubmenu"> {{sub.title}}</button>
        </ion-list>
